--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,8 @@ jobs:
             archive: tar.gz tar.xz tar.zst
           - target: x86_64-apple-darwin
             archive: zip
+          - target: wasm32-wasi
+            archive: zip
     steps:
       - uses: actions/checkout@master
       - name: Compile and release
